[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.26.0", features = ["full"] }
tor-dirclient = "0.6.2"
tor-netdoc = "0.6.2"
tor-rtcompat = {version = "0.8.1", features = ["tokio", "rustls"]}
tor-dirmgr = {version = "0.9.2", features = ["full"] }
arti-client = "0.8.2"

