[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.26.0", features = ["full"] }
tor-dirclient = "0.6.2"
tor-circmgr = "0.7.2"
tor-netdoc = {version = "0.6.2", features = ["dangerous-expose-struct-fields"]}
tor-rtcompat = {version = "0.8.1", features = ["tokio", "rustls"]}
tor-dirmgr = {version = "0.9.2", features = ["full"] }
tor-proto = "0.9.0"
arti-client = "0.8.2"
tor-netdir = "0.8.0"
