[package]
name = "rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.26.0", features = ["full"] }
tor-dirclient = "0.6.2"
tor-circmgr = {version = "0.7.2", features = ["experimental-api"] }
tor-netdoc = {version = "0.6.2", features = ["dangerous-expose-struct-fields"]}
tor-rtcompat = {version = "0.8.1", features = ["tokio", "rustls"]}
tor-dirmgr = {version = "0.9.2", features = ["full"] }
tor-proto = "0.9.0"
tor-netdir = {version = "0.8.0", features = ["experimental-api"]}
arti-client = {version = "0.8.2", features = ["experimental-api"]}
tor-chanmgr = "0.8.2"
chrono = "0.4.24"
rust-lzma = "0.5.1"
reqwest = "0.11.16"
serde_json = "1.0.95"
serde = "1.0.159"
clap = "4.2.1"
port_scanner = "0.1.5"
